update deps fix tutorial prepare for using btred

--- a/dist.ini
+++ b/dist.ini
@@ -8,6 +8,8 @@ main_module = lib/PMLTQ/Command/printtrees.pm
 ; minimal version of Dist::Zilla is 5.043
 
 [Prereqs]
+File::Path = 0
+File::Which = 1.22
 PMLTQ = 1.4.0
 
 [Test::Compile]
