first working version

--- a/dist.ini
+++ b/dist.ini
@@ -8,8 +8,11 @@ main_module = lib/PMLTQ/Command/printtrees.pm
 ; minimal version of Dist::Zilla is 5.043
 
 [Prereqs]
+File::Basename = 0
 File::Path = 0
+File::ShareDir = 1.102
 File::Which = 1.22
+Hash::Merge = 0
 PMLTQ = 1.4.0
 
 [Test::Compile]
@@ -61,8 +64,8 @@ PMLTQ = 1.4.0
 [ManifestSkip]
 
 [Git::GatherDir]
-[ExecDir]
-  dir = script
+;[ExecDir]
+;  dir = script
 
 [ShareDir]
   dir = share
