added some simple tests

--- a/dist.ini
+++ b/dist.ini
@@ -15,6 +15,11 @@ File::Which = 1.22
 Hash::Merge = 0
 PMLTQ = 1.4.0
 
+[Prereqs / AuthorDeps]
+-phase = develop
+-relationship = requires
+Capture::Tiny = 0
+
 [Test::Compile]
 
 [ModuleBuild]
