added tests with btred

--- a/dist.ini
+++ b/dist.ini
@@ -19,6 +19,9 @@ PMLTQ = 1.4.0
 -phase = develop
 -relationship = requires
 Capture::Tiny = 0
+File::Temp = 0
+LWP::Simple = 0
+Archive::Unzip::Burst = 0
 
 [Test::Compile]
 
