--- a/dist.ini
+++ b/dist.ini
@@ -20,8 +20,10 @@ PMLTQ = 1.4.0
 -relationship = requires
 Capture::Tiny = 0
 File::Temp = 0
+File::Grep = 0
 LWP::Simple = 0
 Archive::Unzip::Burst = 0
+Treex::PML = 0
 
 [Test::Compile]
 
