replace test data with multiple documents with small number of trees in order to increase test speed

--- a/xt/author/treebanks/pdt_small_trees/pmltq.yml
+++ b/xt/author/treebanks/pdt_small_trees/pmltq.yml
@@ -3,7 +3,7 @@ data_dir: "data"
 resources: "resources" # main directory with PML schemas
 
 db:
-  name: pdt_test
+  name: pdt_small_trees
   host: localhost
   port: 15432
   user: postgres
