add parallel tree generating

--- a/dist.ini
+++ b/dist.ini
@@ -13,6 +13,7 @@ File::Path = 0
 File::ShareDir = 1.102
 File::Which = 1.22
 Hash::Merge = 0
+Parallel::ForkManager = 1.19
 PMLTQ = 1.4.0
 
 [Prereqs / AuthorDeps]
