increase PMLTQ version because PMLTQ has been splitted to multiple distros

--- a/dist.ini
+++ b/dist.ini
@@ -14,7 +14,8 @@ File::ShareDir = 1.102
 File::Which = 1.22
 Hash::Merge = 0
 Parallel::ForkManager = 1.19
-PMLTQ = 1.4.0
+PMLTQ = 2.0.0
+PMLTQ::Commands = 2.0.0
 
 [Prereqs / AuthorDeps]
 -phase = develop
